--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,23 +1,28 @@
+body{
+  margin: 0;
+}
+
 .container{
+  width: 100%;
+  height: 100vh;
   display: flex;
+  background: url("https://i.pinimg.com/originals/bf/fe/9b/bffe9b97a8a4546e826633e7c87fc9b7.png");
   align-items: center;
   justify-content: center;
-  width: 100%;
-  /* background: url("https://i.pinimg.com/originals/69/b9/33/69b9339b2932df73183a7d17a031e559.jpg"); */
-  height: 100%;
+  background-size: cover;
+  background-color: hsla(0, 0, 0, 0.55);
   background-repeat: no-repeat;
-  background-size: 100vh;
-  background-position: center;
 }
 
 .cardContainer{
-  box-shadow: inset 0 0 0 1px hsla(0, 0%, 0%, .1);
-  display: flex;
-  flex-direction: column;
   width: 600px;
-  height: auto;
-  padding-bottom: 20px;
   margin: 0px 20px;
+  height: auto;
+  display: flex;
+  box-shadow: inset 0 0 0 1px hsla(25, 94%, 49%, 0.9);
+  background: rgba(0, 0, 0, 0.348);
+  padding-bottom: 20px;
+  flex-direction: column;
 }
 
 .imageContainer{
@@ -28,8 +33,12 @@
   object-fit: cover;
 }
 
-section h3{
+section h2{
+  color: rgb(237, 132, 13);
+  font-size: 1.4rem;
   text-align: center;
+  font-weight: bold;
+  font-family: 'Merienda', cursive;
 }
 
 .left-arrow,.right-arrow{
